log/build_2026-04-03_03-02-11/trust_contact/stdout_stderr.log
running egg_info
writing ../../build/trust_contact/trust_contact.egg-info/PKG-INFO
writing dependency_links to ../../build/trust_contact/trust_contact.egg-info/dependency_links.txt
writing entry points to ../../build/trust_contact/trust_contact.egg-info/entry_points.txt
writing requirements to ../../build/trust_contact/trust_contact.egg-info/requires.txt
writing top-level names to ../../build/trust_contact/trust_contact.egg-info/top_level.txt
reading manifest file '../../build/trust_contact/trust_contact.egg-info/SOURCES.txt'
writing manifest file '../../build/trust_contact/trust_contact.egg-info/SOURCES.txt'
running build
running build_py
copying trust_contact/simulation.py -> /home/paulav/contact_ws/build/trust_contact/build/lib/trust_contact
copying trust_contact/generating_data.py -> /home/paulav/contact_ws/build/trust_contact/build/lib/trust_contact
copying trust_contact/residual_node.py -> /home/paulav/contact_ws/build/trust_contact/build/lib/trust_contact
running install
running install_lib
copying /home/paulav/contact_ws/build/trust_contact/build/lib/trust_contact/simulation.py -> /home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact
copying /home/paulav/contact_ws/build/trust_contact/build/lib/trust_contact/generating_data.py -> /home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact
copying /home/paulav/contact_ws/build/trust_contact/build/lib/trust_contact/residual_node.py -> /home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact
byte-compiling /home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact/simulation.py to simulation.cpython-310.pyc
byte-compiling /home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact/generating_data.py to generating_data.cpython-310.pyc
byte-compiling /home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact/residual_node.py to residual_node.cpython-310.pyc
  File "/home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact/generating_data.py", line 54
    model.fit(X, speed_true)import random
                            ^^^^^^
SyntaxError: invalid syntax

running install_data
copying launch/trust_contact_launch.py -> /home/paulav/contact_ws/install/trust_contact/share/trust_contact/launch
running install_egg_info
removing '/home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/trust_contact/trust_contact.egg-info to /home/paulav/contact_ws/install/trust_contact/lib/python3.10/site-packages/trust_contact-0.0.0-py3.10.egg-info
running install_scripts
Installing contact_classifier_node script to /home/paulav/contact_ws/install/trust_contact/lib/trust_contact
Installing fsm_node script to /home/paulav/contact_ws/install/trust_contact/lib/trust_contact
Installing residual_node script to /home/paulav/contact_ws/install/trust_contact/lib/trust_contact
Installing simulation script to /home/paulav/contact_ws/install/trust_contact/lib/trust_contact
writing list of installed files to '/home/paulav/contact_ws/build/trust_contact/install.log'
